--- a/app_salespage/index.html
+++ b/app_salespage/index.html
@@ -10,10 +10,10 @@
     <title>Gamma: photo sharing app</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="/css/bootstrap.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="/css/style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 
   </head>
 
@@ -28,13 +28,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand em-text" href="#">Gamma</a>
+          <a class="navbar-brand em-text" href="index.html">Gamma</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="about">About</a></li>
-            <li><a href="contact">Contact</a></li>
+            <li class="active"><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -46,8 +46,8 @@
                 <div class="col-md-6">
                     <h1>Capture <span class="em-text">Life</span></h1>
                     <p>A fun and easy way to carture & share the moment of your life for</p>
-                    <a href="#"><img class="app-btn" src="/img/icon_app_store.png"></a>
-                    <a href="#"><img class="app-btn" src="/img/icon_google_play.png"></a>
+                    <a href="#"><img class="app-btn" src="img/icon_app_store.png"></a>
+                    <a href="#"><img class="app-btn" src="img/icon_google_play.png"></a>
                 </div>
                 <div class="col-md-6">
                     <img class="showcase-img" src="img/site_phone.png">
@@ -108,7 +108,7 @@
     <footer>
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-6 col-xs-12">
                     <ul>
                         <li><a href="#">Home</a></li>
                         <li><a href="#">About</a></li>
@@ -116,7 +116,7 @@
                         <li><a href="#">Privacy Policy</a></li>
                     </ul>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 col-xs-12">
                     <p>Copyright &copy; 2017</p>
                 </div>
                 
@@ -128,7 +128,7 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.js"></script>
   </body>
 </html>
 
